blogr-landing-page-main/assets/style.css
/* ... */
/* 

---------- hero section styling -----------

*/


.header {
    position: relative;
    padding: 3.5em 1.5em 9.75em; /* 56 ÷ 16 | 24 ÷ 16 | 156 ÷ 16 */
    border-radius: 0 0 0 6.25em; /* 100 ÷ 16 */

    background-image: linear-gradient(135deg, #FF8F71 0%, #FF3E55 100%);
    overflow: hidden;
}

.header::before {
    content: '';
    position: absolute;
    width: 44.385375em; /* 710,166 ÷ 16 */
    height: 44.697125em; /* 715,154 ÷ 16 */
    background-image: url(./images/bg-pattern-intro-mobile.svg);
    background-repeat: no-repeat;

    background-position: -20.875em -15.1875em; /* 334 ÷ 16 | 243 ÷ 16 */

    left: 0;
    top: 0;
}

.header > .wrapper {
    position: relative;
    z-index: 10;

    max-width: 69.375em; /* 1110 ÷ 16 */
    margin-inline: auto;
}

.hero {
    margin-top: 6.75em; /* 108 ÷ 16 */
}

.hero__content {
    text-align: center;
    color: white;
    padding-inline: 0.625em; /* 10 ÷ 16 */
}

.hero__content > h1 {
    font-size: 2.25rem; /* 36 ÷ 16  */
    letter-spacing: -1.08px;
    margin: 0;
}

.hero__content > p {
    font-size: 1.125rem; /* 18 ÷ 16 */
    margin: 0;
}

.hero__cta {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1em;
    margin-top: 3em; /* 48 ÷ 16 */
}


@media screen and (min-width: 44.4375em) { /* 711 ÷ 16 */
    .header {
        padding-block: clamp(3.5em, calc(3.5em + 0.4861111vw), 3.9375em) 9.6875em; /* 63 ÷ 16 | 155 ÷ 16 */
    }

    .header::before {
        background-image: url(./images/bg-pattern-intro-desktop.svg);
        background-position: -27.375em -83.8125em; /* 438 ÷ 16 | 1341 ÷ 16 */
        width: 106.5625em; /* 1705 ÷ 16 */
        height: 107.25em; /* 1716 ÷ 16 */
    }

    .hero {
        margin-top: clamp(6.75em, calc(6.75em + 1.0416667vw), 7.6875em); /* 123 ÷ 16 */
    }

    .hero__content > h1 {
        font-size: clamp(2.25rem, calc(2.25rem + 1.9444444vw), 4rem); /* 28 ÷ 1440 | 64 ÷ 16 */
        letter-spacing: -1.92px;
    }

    .hero__content > p {
        font-size: clamp(1.125rem, calc(1.125rem + 0.1388889vw), 1.25rem); /* 20 ÷ 16 */
    }

    .hero__cta {
        margin-top: 2.6875em; /* 43 ÷ 16 */
    }
}



/* 

---------- intro section styling -----------

*/


.intro {
    margin-top: 6.25em; /* 100 ÷ 16 */
    padding-inline: 1.5em; /* 24 ÷ 16 */

    text-align: center;
}

.intro > .wrapper {
    max-width: 43.0625em; /* 689 ÷ 16 */
    margin-inline: auto;
}

.intro__heading > h2 {
    font-size: 1.75rem; /* 28 ÷ 16 */
    letter-spacing: -0.84px; 
    color: #1F3E5A;
    margin: 0;
}

.intro__media {
    margin-top: 2.375em; /* 38 ÷ 16 */

    max-width: 20.375em;
    min-height: 20.375em; 
    background: url(./images/illustration-editor-mobile.svg) center/cover no-repeat;

    margin-inline: auto;
}

.intro__content {
    margin-top: 2.875em; /* 46 ÷ 16 */
}

.intro__content__p {
    padding-inline: 0.5625em; /* 9 ÷ 16 */
}

.intro__content__p > h3 {
    font-size: 1.75rem; /* 28 ÷ 16 */
    line-height: 114.286%;
    color: #1F3E5A;

    margin-block: 0;
}

.intro__content__p > p {
    margin-block: 1em 0;

    line-height: 175%;
    letter-spacing: 0.5px;
    color: #4C5862;
}


@media screen and (min-width: 59.9375em) { /* 959 ÷ 16  */

    .intro {
        padding-inline: clamp(2em, calc(2em + 3.0833333vw), 6em); /* 32 ÷ 16 | 69 ÷ 16 | (69 - 32) ÷ 1200 */
        margin-top: 4.4375em; /* 71 ÷ 16 */
        min-height: clamp(51.5em, calc(51.5em + 4.0277778vw), 55.125em); /* 824 ÷ 16 | 882 ÷ 16 */

        overflow: hidden;
    }

    .intro > .wrapper {
        max-width: 69.375em; /* 1110 ÷ 16 */
        margin-inline: auto;
        margin-top: 4.4375em; /* 71 ÷ 16 */
    }

    .intro__grid {
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        column-gap: 1.875em; /* 30 ÷ 16 */    
        row-gap: 5.8125em;  /* 93 ÷ 16 */ 
    }

    .intro__heading {
        grid-column: 1 / 13;
        order: 1;
    }

    .intro__heading > h2 {
        font-size: 2.5rem; /* 40 ÷ 16 */
        font-size: clamp(1.75rem, calc(1.75rem + 0.8333333vw), 2.5rem); /* 40 ÷ 16  */
        letter-spacing: -1.2px;
    }

    .intro__media {
        grid-column: 8 / 13;
        order: 3;
        position: relative;
        margin-top: 0;

        min-height: 25.73825em; /* 411,812 ÷ 16 */
        max-width: unset;

        background: unset;
        margin-inline: unset;
    }

    .intro__media::before {
        content: '';
        position: absolute;
        width: clamp(43.75em, calc(43.75em + 15.625vw), 57.8125em); /* 700 ÷ 16 | 925 ÷ 16 */
        height: clamp(40.1875em, calc(40.1875em + 16.5972222vw), 55.125em);  /* 643 ÷ 16 | 882 ÷ 16 */

        overflow: visible;

        background: url(./images/illustration-editor-desktop.svg) center/contain no-repeat;
        background-size: 99%;

        transform: translateY(-50%);
        left: -10%;
        top: clamp(12.592975em, calc(12.592975em + 1.7933611vw), 14.207em); /* 201,4876 ÷ 16  | 227.312 ÷ 16 */
    }

    .intro__content {
        grid-column: 1 / 7;
        margin: 0;
        order: 2;

        text-align: left;
    }

    .intro__content__p {
        padding: 0;
    }

}


/* 

---------- intro section styling -----------

*/

.infra {
    margin-top: 17.0625em; /* 273 ÷ 16 */
}

.infra__intro {
    position: relative;
    padding: 13.8125em 1.5em 6.8125em; /* 221 ÷ 16 | 24 ÷ 16 | 109 ÷ 16 */
    border-radius: 0 6.25em; /* 100 ÷ 16 */

    background: url(images/bg-pattern-circles.svg) center -17.0625em/37.625em 37.75em no-repeat, /* 273 ÷ 16 |  602 ÷ 16 |  604 ÷ 16 */
                linear-gradient(135deg, #2D2E40 0%, #3F4164 100%) center top/cover;

}

.infra__intro > .wrapper {
    max-width: 43.9375em; /* 703 ÷ 16 */
    margin-inline: auto;
}
/* ... */

